[gd_scene format=3 uid="uid://cy5h7k8mam0n1"]

[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="1_pause"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_pause")

[node name="MainMenu" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -75.0
offset_right = 100.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Return to Game"

[node name="SettingsButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="SettingsMenu" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -75.0
offset_right = 100.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VolumeLabel" type="Label" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2
text = "Master Volume"
horizontal_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2
min_value = 0.0
max_value = 100.0
value = 100.0
tick_count = 11
ticks_on_borders = true

[node name="BackButton" type="Button" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2
text = "Back"
